# hsoldapps

./: LICENSE  README.md  hsoldapps.cabal
demo/: hsoldapp1.hs
src/Ethereum/Solidity/: Coin.hs  Meta.hs  New1.hs  Overload.hs  OwnedToken.hs  Sharer.hs  Test1.hs  Topics.hs  Typeops.hs  Types.hs  abstact1.sol  coin.sol  external1.sol  internal1.sol  named1.sol  new1.sol  overload.sol  overloading.sol  ownedtoken.sol  sharer.sol  simple1.sol  test1.sol  topics.sol  typeops.sol  types.sol
